2009-09-21  Maciej W. Rozycki  <macro@linux-mips.org>

	* gas/mips/mips.exp: Fix a typo.

2009-09-21  Ben Elliston  <bje@au.ibm.com>
	    Peter Bergner  <bergner@vnet.ibm.com>

	* gas/ppc/a2.s: New.
	* gas/ppc/a2.d: Likewise.
	* gas/ppc/ppc.exp: Run the a2 dump test.

2009-09-21  Ben Elliston  <bje@au.ibm.com>

	* gas/ppc/e500mc.d: Remove blank line at the end of file.

2009-09-15  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/i386/disp.s: Add an offset test.
	* gas/i386/x86-64-disp.s: Likewise.

	* gas/i386/intelbad.s: Comment out "byte ptr [1]" test.

	* gas/i386/disp.d: Updated.
	* gas/i386/disp-intel.d: Likewise.
	* gas/i386/intelbad.l: Likewise.
	* gas/i386/x86-64-disp.d: Likewise.
	* gas/i386/x86-64-disp-intel.d: Likewise.

2009-09-14  H.J. Lu  <hongjiu.lu@intel.com>

	PR gas/10637
	* gas/i386/disp.s: Add tests for Intel syntax.
	* gas/i386/x86-64-disp.s: Likewise.

	* gas/i386/disp.d: Updated.
	* gas/i386/intelok.d: Likewise.
	* gas/i386/x86-64-disp.d: Likewise.

	* gas/i386/disp-intel.d: New.
	* gas/i386/x86-64-disp-intel.d: Likewise.

	* gas/i386/i386.exp: Run disp-intel and x86-64-disp-intel.

2009-09-14  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/i386/merom.[ds]: Renamed to ...
	* gas/i386/ssse3.[ds]: This.

	* gas/i386/nops-1-merom.d: Renamed to ...
	* gas/i386/nops-1-core2.d: This.

	* gas/i386/nops-2-merom.d: Renamed to ...
	* gas/i386/nops-2-core2.d: This.

	* gas/i386/prescott.[ds]: Renamed to ...
	* gas/i386/sse3.[ds]: This.

	* gas/i386/x86-64-merom.[ds]: Renamed to ...
	* gas/i386/x86-64-ssse3.[ds]: This.

	* gas/i386/x86-64-nops-1-merom.d: Renamed to ...
	* gas/i386/x86-64-nops-1-core2.d: This.

	* gas/i386/x86-64-prescott.[ds]: Renamed to ...
	* gas/i386/x86-64-sse3.[ds]: This.

	* gas/i386/i386.exp: Updated.

2009-09-14  H.J. Lu  <hongjiu.lu@intel.com>

	PR gas/10636
	* gas/i386/disp.d: New.
	* gas/i386/disp.s: Likewise.
	* gas/i386/x86-64-disp.d: Likewise.
	* gas/i386/x86-64-disp.s: Likewise.

	* gas/i386/i386.exp: Run disp and x86-64-disp.
