@@ -7,3 +7,6 @@
 	.set	noreorder
 	b	1b
 	.set	reorder
+
+# Force at least 8 (non-delay-slot) zero bytes, to make 'objdump' print ...
+        .space	8
