@@ -12,3 +12,6 @@ bar:
 1:
 	jr	$31
 	.end	bar
+
+# Force at least 8 (non-delay-slot) zero bytes, to make 'objdump' print ...
+        .space	8
